--- a/src/App.css
+++ b/src/App.css
@@ -510,6 +510,17 @@ li h3 {
   transition: 0.5s ease-in-out;
 }
 
+/* APPOINTMENT REQUEST */
+.appointment-request {
+  background: white;
+  position: fixed;
+  top: 94%;
+  left: 70%;
+}
+/* .index-form {
+  height: 99%;
+} */
+
 /* PROVIDER/EMPLOYEE DIRECTORY */
 .staff, .single-staff {
   background: white;
