Revert "changed appointment request css"
This reverts commit 5b02e964e84b5bee59fbbbf00597be72e7aaad52.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -513,7 +513,7 @@ li h3 {
 /* APPOINTMENT REQUEST */
 .appointment-request {
   background: white;
-  /* position: fixed; */
+  position: fixed;
   top: 94%;
   left: 70%;
 }
