--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,9 @@
 img {
   width: 400px;
 }
+a:hover {
+  cursor: pointer;
+}
 
 /* NAVIGATION */
 .navbar {
@@ -139,6 +142,7 @@ button {
   background: #E8374D;
   border: 1px solid rgba(0, 0, 0, 0.507);
   box-shadow: 1px solid black;
+  border-radius: 8px;
   font-size: 150%;
   font-weight: bolder;
   text-shadow: 1px 1px black;
@@ -487,13 +491,12 @@ li h3 {
   color: white;
   margin: 1%;
   padding: 1%;
-
 }
 
 /* FOOTER */
 .footer {
   background: #E8374D;
-  padding: 3%;
+  padding: 5% 3%;
 }
 .list {
   display: flex;
@@ -509,17 +512,75 @@ li h3 {
   color: black;
   transition: 0.5s ease-in-out;
 }
+#appointment-form {
+  display: none;
+}
 
 /* APPOINTMENT REQUEST */
 .appointment-request {
+  z-index: 2;
   background: white;
-  /* position: fixed; */
+  position: fixed;
+  display: inline-block;
   top: 94%;
   left: 70%;
+  border-radius: 8.5px;
 }
-/* .index-form {
-  height: 99%;
-} */
+.index-form div {
+  overflow: hidden;
+}
+.index-form form {
+  background: white;
+  padding: 10px;
+  border: solid 1px black;
+  position: absolute;
+  width: 400px;
+  bottom: 45px;
+  left: -75px;
+  text-align: left;
+}
+.names, .selection, .patient-contact, .patient-information {
+  display: flex;
+  justify-content: flex-start;
+}
+.middle-initial {
+  width: 20px;
+}
+.index-form form div {
+  margin: 10px 5px;
+}
+.index-form textarea {
+  resize: none;
+  margin: 5px 0;
+  width: 370px;
+  height: 50px;
+}
+.submit-button {
+  text-align: center;
+}
+.submit {
+  background: #E8374D;
+  border: 1px solid rgba(0, 0, 0, 0.507);
+  box-shadow: 1px solid black;
+  font-size: 150%;
+  font-weight: bolder;
+  text-shadow: 1px 1px black;
+  padding: 10px;
+  color: white;
+  font-family: 'Source Sans Pro', sans-serif;
+  transition-duration: 1s;
+}
+.submit:hover {
+  background: black;
+  transition-duration: 1s;
+  cursor: pointer;
+}
+
+/* APPOINTMENT FORM */
+.appointment-form {
+  padding: 5%;
+  background-color: white;
+}
 
 /* PROVIDER/EMPLOYEE DIRECTORY */
 .staff, .single-staff {
@@ -884,6 +945,41 @@ li h3 {
     margin: 10px;
   }
 
+  /* APPOINTMENT REQUEST */
+  .appointment-request {
+    display: none;
+  }
+
+  /* APPOINTMENT FORM */
+  .appointment-form input, .appointment-form select, .appointment-form textarea {
+    border-radius: 4px;
+    border: solid gray 1px;
+  }
+  .appointment-form p {
+    text-align: left;
+  }
+  .appointment-form form div {
+    margin: 10px;
+  }
+  .names, .patient-contact, .selection, .patient-information {
+    text-align: left;
+  }
+  .patient-information textarea {
+    resize: none;
+    margin: 10px 0;
+    width: 100%;
+    height: 100px;
+  }
+
+
+  /* FOOTER */
+  .footer {
+    font-size: 40%;
+  }
+  #appointment-form {
+    display: block;
+  }
+
   /* STAFF */
   .doctor-info, .nurse-info {
     text-align: left;
@@ -1009,6 +1105,23 @@ li h3 {
   }
   .facebook img {
     width: 14px;
+  }
+
+  .appointment-form p {
+    text-align: left;
+  }
+  .appointment-form form div {
+    margin: 10px;
+  }
+  .names, .patient-contact, .selection, .patient-information {
+    display: block;
+    text-align: left;
+  }
+  .patient-information textarea {
+    resize: none;
+    margin: 10px 0;
+    width: 250px;
+    height: 100px;
   }
   .provider-container img {
     width: 90%;
