--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,6 +44,9 @@ a:hover {
 .navbar.logo {
   margin: auto 10px;
 }
+.mobile-bar {
+  display: none;
+}
 .bar {
   display: flex;
   width: 55%;
@@ -901,17 +904,41 @@ li h3 {
     margin: 0;
   }
   .bar {
-    width: auto;
+    display: none;
   }
-  .bar a {
+  .mobile-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .mobile-bar a {
     margin: auto 10px;
     font-size: 24px;
+    text-decoration: none;
+    color: white;
+  }
+  .mobile-bar a:hover {
+    color: #E8374D;
+    transition-duration: 0.5s;
   }
   .sub-menu {
     padding: 0;
   }
   .staff-menu, .dropdown-menu {
     transform: translate(5px, 75px);
+    background-color: #282c34;
+  }
+  .staff-menu .staff-link a {
+    color: white;
+  }
+  .staff-menu .staff-link a:hover {
+    color: #E8374D;
+    background: rgb(255, 255, 255);
+    transition: 0.5s ease-in-out;
+  }
+  .dropdown-menu a:hover {
+    background: rgb(255, 255, 255);
+    transition-duration: 0.5s ease-in-out;
   }
   .navbar .facebook {
     margin: auto 5px;
