changed appearance for mobile navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1133,7 +1133,7 @@ li h3 {
   covid-19 {
     font-size: smaller;
   }
-  .bar a {
+  .mobile-bar a {
     margin: auto 5px;
     font-size: 10px;
   }
