--- a/client/src/App.css
+++ b/client/src/App.css
@@ -898,7 +898,8 @@ li h3 {
   .navbar {
     padding: 0;
     width: 100%;
-    height: 75px;
+    height: 0;
+    display: block;
   }
   .navbar .logo {
     margin: 0;
@@ -907,13 +908,30 @@ li h3 {
     display: none;
   }
   .mobile-bar {
+    z-index: 2;
+    display: block;
+    text-align: left;
+  }
+  .full-bar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    margin: auto 10px;
+  }
+  .menu-toggle {
+    margin: auto 0;
+  }
+  .container {
+    /* display: inline-block; */
+    cursor: pointer;
+    margin: 10px 0;
+  }
+  .bar1, .bar2, .bar3 {
+    width: 20px;
+    height: 2px;
+    background-color: white;
+    margin: 4px 0;
   }
   .mobile-bar a {
-    margin: auto 10px;
-    font-size: 24px;
     text-decoration: none;
     color: white;
   }
@@ -921,14 +939,24 @@ li h3 {
     color: #E8374D;
     transition-duration: 0.5s;
   }
-  .sub-menu {
+  .open-hamburger-menu {
+    display: block;
+  }
+  .open-hamburger-menu h4, .hamburger-menu h4 {
+    color: white;
+    margin: 5px auto;
+  }
+  /* .sub-menu {
     padding: 0;
+    margin: auto;
   }
   .staff-menu, .dropdown-menu {
-    transform: translate(5px, 75px);
+    transform: none;
     background-color: #282c34;
+    position: relative;
   }
   .staff-menu .staff-link a {
+    padding: 0 5px;
     color: white;
   }
   .staff-menu .staff-link a:hover {
@@ -939,10 +967,13 @@ li h3 {
   .dropdown-menu a:hover {
     background: rgb(255, 255, 255);
     transition-duration: 0.5s ease-in-out;
-  }
+  } */
   .navbar .facebook {
     margin: auto 5px;
+    display: block;
+    padding: 3px;
   }
+
   /* SPLASHPAGE */
   .image-text h1 {
     font-size: 300%;
@@ -1133,10 +1164,10 @@ li h3 {
   covid-19 {
     font-size: smaller;
   }
-  .mobile-bar a {
+  /* .mobile-bar a {
     margin: auto 5px;
     font-size: 10px;
-  }
+  } */
   .navbar .facebook {
     margin: auto;
   }
