--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,120 +26,6 @@ a:hover {
   cursor: pointer;
 }
 
-/* NAVIGATION */
-.navbar {
-  z-index: 2;
-  background-color: rgb(0, 0, 0);
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  width: 100%;
-  transform: translateY(0px);
-  transition: 0.25s;
-  height: 80px;
-}
-
-.logo img {
-  width: 250px;
-  margin-left: 20px;
-  float: left;
-}
-
-.scrolled {
-  background-color: rgba(0, 0, 0);
-  position: sticky;
-  top: 0;
-  transition: 0.25s;
-}
-.navbar.logo {
-  float: left;  
-}
-.mobile-bar {
-  display: none;
-}
-.bar {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  align-items: center;
-}
-.bar a {
-  display: block;
-  text-decoration: none;
-  color: white;
-  margin: auto 10px;
-  font-size: 16px;
-  transition-duration: 0.5s;
-}
-.bar a:hover {
-  color: #E8374D;
-  transition-duration: 0.5s;
-}
-.navbar .facebook {
-  margin: auto 10px;
-}
-.facebook img {
-  width: 32px;
-}
-.sub-menu {
-  padding: 8.5% 0;
-  margin: 0;
-}
-.dropdown-menu {
-  background: rgb(245, 245, 245);
-  display: grid;
-  overflow: hidden;
-  position: absolute;
-  top: 0px;
-  box-shadow: gray 2px 2px;
-  transform: translate(5px, 120px);
-  transition: .4s;
-}
-.collapse-menu {
-  position: absolute;
-  width: 107.42px;
-  top: 40px;
-  transform: translate(5px, 0px);
-  transition: 0.4s ease-in-out;
-}
-
-.dropdown-menu a {
-  color: black;
-  text-align: left;
-  padding: 10px 20px 10px 10px;
-  margin: 0;
-  transition-duration: 0.5s ease-in-out;
-}
-.dropdown-menu a:hover {
-  background: rgb(255, 255, 255);
-  transition-duration: 0.5s ease-in-out;
-}
-.staff-menu {
-  background: rgb(245, 245, 245);
-  display: grid;
-  overflow: hidden;
-  position: absolute;
-  top: 0px;
-  box-shadow: gray 2px 2px;
-  transform: translate(5px, 120px);
-  transition: .4s;
-}
-.staff-menu .staff-link a {
-  display: block;
-  color: black;
-  text-align: left;
-  padding: 10px 20px 10px 10px;
-  margin: 0;
-  transition-duration: 0.5s ease-in-out;
-}
-.staff-link {
-  display: block;
-  text-align: left;
-}
-.staff-menu .staff-link a:hover {
-  color: #E8374D;
-  background: rgb(255, 255, 255);
-  transition: 0.5s ease-in-out;
-}
-
 /* SPLASHPAGE */
 
 .splashpage {
@@ -188,7 +74,7 @@ button:hover {
 }
 
 .about h3 {
-  padding: 3%;
+  padding: 5%;
   margin: auto;
   line-height: 2em;
   font-weight: lighter;
@@ -202,19 +88,7 @@ button:hover {
   grid-template-columns: repeat(3, 1fr);
   text-shadow: 1px 1px black;
 }
-/* .hours {
-  background: white;
-  align-items: center;
-  text-align: left;
-  padding: 5%;
-}
-.hours h4 {
-  color: #E8374D;
-  margin: 0;
-  font-size: 125%;
-  font-weight: bolder;
-  line-height: 1em;
-} */
+
 .education {
   background-image: url('./images/education.jpg');
   display: flex;
@@ -263,7 +137,7 @@ button:hover {
 
 /* DIETING */
 .dieting {
-  padding: 3%;
+  padding: 5%;
 }
 .dieting p {
   text-align: left;
@@ -284,6 +158,7 @@ button:hover {
   padding-bottom: 2%;
   overflow: hidden;
   color: black;
+  border-radius: 6px;
 }
 .diet-box hr {
   height: auto;
@@ -340,6 +215,7 @@ button:hover {
   margin: 5px;
   padding-bottom: 2%;
   overflow: hidden;
+  border-radius: 6px;
 }
 .exercise-box hr {
   height: auto;
@@ -467,19 +343,28 @@ li h3 {
 
 .contact {
   text-align: center;
-  background: white;
-  padding: 1%;
+  background: rgb(255, 205, 205);
+  padding: 2%;
 }
 .contact h1 {
   text-align: left;
 }
 .contact-info {
   display: grid;
-  grid-template-columns: 3fr;
+  grid-template-columns: 1fr 1fr 1fr;
   box-sizing: border-box;
   color: black;
   margin: 1%;
   padding: 1%;
+}
+
+.contact-info h4 {
+  margin: auto;
+}
+
+.operation {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 /* FOOTER */
@@ -582,34 +467,31 @@ li h3 {
 }
 
 /* PROVIDER/EMPLOYEE DIRECTORY */
+.doctor {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: end;
+}
+
 .staff, .single-staff {
   background: white;
   padding: 1%;
 }
-.provider-container {
-  margin: auto;
-}
 
-.np-container {
-  margin: auto;
-  display: flex;
-}
 .np-container div {
   margin: 5px;
 }
+
 .staff img {
-  width: 30%;
+  width: 50%;
 }
-.np-container div img {
-  width: 93%;
+
+.staff-photo img {
+  width: 50%;
 }
-.cma-container {
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-.cma-container div img {
-  width: 93%;
+
+.doctor-image img, .nurse-image img {
+  width: 80%;
 }
 
 .doctor-description {
@@ -617,11 +499,11 @@ li h3 {
 }
 .doctor-info, .nurse-info {
   text-align: left;
-  display: flex;
-  margin: auto 10px
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .doctor-about, .nurse-about {
-  width: 80%;
+  width: 75%;
 }
 .staff a, .single-staff a {
   text-decoration: none;
@@ -879,92 +761,6 @@ li h3 {
 }
 
 @media screen and (max-width: 900px) {
-  /* NAVBAR */
-  .logo img {
-    display: none;
-  }
-  .footer {
-    display: block;
-    font-size: 50%;
-  }
-  .navbar {
-    padding: 0;
-    width: 100%;
-    height: 0;
-    display: block;
-  }
-  .navbar .logo {
-    margin: 0;
-  }
-  .bar {
-    display: none;
-  }
-  .mobile-bar {
-    z-index: 2;
-    display: block;
-    text-align: left;
-  }
-  .full-bar {
-    display: flex;
-    justify-content: space-between;
-    margin: auto 10px;
-  }
-  .menu-toggle {
-    margin: auto 0;
-  }
-  .container {
-    /* display: inline-block; */
-    cursor: pointer;
-    margin: 10px 0;
-  }
-  .bar1, .bar2, .bar3 {
-    width: 20px;
-    height: 2px;
-    background-color: white;
-    margin: 4px 0;
-  }
-  .mobile-bar a {
-    text-decoration: none;
-    color: white;
-  }
-  .mobile-bar a:hover {
-    color: #E8374D;
-    transition-duration: 0.5s;
-  }
-  .open-hamburger-menu {
-    display: block;
-  }
-  .open-hamburger-menu h4, .hamburger-menu h4 {
-    color: white;
-    margin: 5px auto;
-  }
-  /* .sub-menu {
-    padding: 0;
-    margin: auto;
-  }
-  .staff-menu, .dropdown-menu {
-    transform: none;
-    background-color: #282c34;
-    position: relative;
-  }
-  .staff-menu .staff-link a {
-    padding: 0 5px;
-    color: white;
-  }
-  .staff-menu .staff-link a:hover {
-    color: #E8374D;
-    background: rgb(255, 255, 255);
-    transition: 0.5s ease-in-out;
-  }
-  .dropdown-menu a:hover {
-    background: rgb(255, 255, 255);
-    transition-duration: 0.5s ease-in-out;
-  } */
-  .navbar .facebook {
-    margin: auto 5px;
-    display: block;
-    padding: 3px;
-  }
 
   /* SPLASHPAGE */
   .image-text h1 {
